--- a/project/mvcPattern/src/main/webapp/resources/pages/examples/register.html
+++ b/project/mvcPattern/src/main/webapp/resources/pages/examples/register.html
@@ -78,7 +78,7 @@
     <!-- /.form-box -->
   </div><!-- /.card -->
 </div>
-<!-- /.register-box -->
+<!-- /.user-box -->
 
 <!-- jQuery -->
 <script src="../../plugins/jquery/jquery.min.js"></script>
